Refactor DAO methods for improved type safety and exception handling, update service layer to use java.util.stream.toList for cleaner stream operations, and enhance proxy mapping cache initialization logic.